# gamestats-application/api/dtos.go
@@ -1,0 +1,6 @@
+package api
+
+type UserDto struct {
+	Id       string `json:"id"`
+	Username string `json:"username"`
+}
