# gamestats-domain/entities/user_details.go
@@ -1,7 +1,0 @@
-package entities
-
-type LoginDetails struct {
-	Username        string `json:"username"`
-	AuthToken       string `json:"authToken"`
-	FavouriteNumber int    `json:"favouriteNumber"`
-}
